--- a/favorites.html
+++ b/favorites.html
@@ -24,7 +24,7 @@
     </header> 
     <div class="list">
         <div class="three">
-            <h1><br>Things make my day 💫</h1>
+            <h1><br>Things that make my day 💫</h1>
             <div class = "favorites">
                 <div class="lists">
                     <img class = "list_img" src="./contents/what i love/wine.JPG" alt="">
