--- a/about.html
+++ b/about.html
@@ -25,21 +25,22 @@
     </header> 
     <div class="list">
       <div class ="two">
-          <img class = "me" src ="./contents/tulip.jpeg" alt="" width="450px;" height="500px">
-          <h3 class ="intext"> <strong>Education</strong><br><br>
+          <img class = "me" src ="./contents/tulip.jpeg" alt="" width="400px;" height="400px">
+          <h3 class ="intext"><u><strong>Education</strong></u> <br><br>
             <div>
                 <b>2021</b> 한국외국어대학교 GBT학부 편입학<br>
                 <b>2022</b> AI&Software 이중전공 <br><br><br>
             </div>
-            <strong>Activity</strong><br><br>
+            <u><strong>Activity</strong><br><br></u>
             <b>2021</b> HUFS 코딩테스트 대비 캠프 수료 <br><br>
-            <b>2022</b> 한국외대 멋쟁이사자처럼 10기 Back-End<br>
+            <b>2022</b> 한국외대 멋쟁이사자처럼 10기 🦁 Back-End<br>
             HUFS 여름방학 모각코 캠프 수료<br>
             Nexon x MapleStoryWorld 슈퍼해커톤 참여<br>
-            GBT학부 수직 근로 <br><br>
-            <b>2023</b> HUFS 데이터 전문가 육성 과정 수료 <br>
-            고급파이썬프로그래밍 수업 조교 <br>
-            한국외대 멋쟁이사자처럼 11기 Front-End
+            GBT학부 과사무실 수직생 근로 <br><br>
+            <b>2023</b> HUFS 데이터 전문가 육성 과정 우수 수료 <br>
+            AI융합전공-고급파이썬프로그래밍 수업 조교 <br>
+            한국외대 멋쟁이사자처럼 11기 🦁 Front-End<br><br>
+            🌟 요즘은 데이터 & 딥러닝 공부중입니다 🌟
             </h3>
       </div>
   </div>
