--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                 <a href="https://www.instagram.com/springbommy/">
                   <img class = "list_img" src="./contents/what i love/archive.jpeg" alt="">
                 </a>
-                  <p class = "list_text"> Archive 📓</p>
+                  <p class = "list_text"> Record 📓</p>
               </div>
 
               <div class="lists">
