--- a/index.html
+++ b/index.html
@@ -46,9 +46,9 @@
             HUFS 여름방학 모각코 캠프 수료<br>
             Nexon x MapleStoryWorld 슈퍼해커톤 참여<br>
             GBT학부 과사무실 수직생 근로 <br><br>
-            <b>2023</b> HUFS 데이터 전문가 육성 과정 우수 수료 <br>
-            AI융합전공-고급파이썬프로그래밍 수업 조교 <br>
-            한국외대 멋쟁이사자처럼 11기 🦁 Front-End <br><br>
+            <b>2023</b> 한국외대 멋쟁이사자처럼 11기 🦁 Front-End <br>
+            HUFS 데이터 전문가 육성 과정 우수 수료 <br>
+            AI융합전공-고급파이썬프로그래밍 수업 조교<br><br>
             🌟 요즘은 데이터 & 딥러닝 공부중입니다 🌟
         </h3>
       </div>
