--- a/about.html
+++ b/about.html
@@ -41,7 +41,7 @@
             HUFS 데이터 전문가 육성 과정 우수 수료<br>
             AI융합전공 [고급파이썬프로그래밍] 수업 조교<br>
             한국디지털융합진흥원 4차산업융합본부 하계&장기 현장실습<br>
-            GBT Hackathon Challenge 수료 <br>
+            GBT x HD현대사이트솔루션 Hackathon Challenge 수료 <br>
             경기청년 갭이어 프로그램 2기 수료<br>
             </h3>
       </div>
