--- a/about.html
+++ b/about.html
@@ -39,11 +39,10 @@
             GBT학부 과사무실 수직생 근로 <br><br>
             <b>2023</b> 한국외대 멋쟁이사자처럼 11기 🦁 Front-End<br>
             HUFS 데이터 전문가 육성 과정 우수 수료<br>
-            AI융합전공-고급파이썬프로그래밍 수업 조교<br>
+            AI융합전공 [고급파이썬프로그래밍] 수업 조교<br>
             한국디지털융합진흥원 4차산업융합본부 하계&장기 현장실습<br>
+            GBT Hackathon Challenge 수료 <br>
             경기청년 갭이어 프로그램 2기 수료<br>
-            GBT Hackathon Challenge 수료
-            
             </h3>
       </div>
   </div>
