--- a/index.html
+++ b/index.html
@@ -47,9 +47,11 @@
             Nexon x MapleStoryWorld 슈퍼해커톤 참여<br>
             GBT학부 과사무실 수직생 근로 <br><br>
             <b>2023</b> 한국외대 멋쟁이사자처럼 11기 🦁 Front-End <br>
-            HUFS 데이터 전문가 육성 과정 우수 수료 <br>
-            AI융합전공-고급파이썬프로그래밍 수업 조교<br><br>
-            🌟 요즘은 데이터 & 딥러닝 공부중입니다 🌟
+            HUFS 데이터 전문가 육성 과정 우수 수료<br>
+            AI융합전공 [고급파이썬프로그래밍] 수업 조교<br>
+            한국디지털융합진흥원 4차산업융합본부 하계&장기 현장실습<br>
+            GBT x HD현대사이트솔루션 Hackathon Challenge 수료 <br>
+            경기청년 갭이어 프로그램 2기 수료<br>
         </h3>
       </div>
   </div>
